--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -12,6 +12,11 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
     
+    <label>
+        <input type="checkbox" name="is_admin" value="true">
+        Register as Admin
+    </label>
+    
     <button type="submit">Register</button>
 </form>
 {% endblock %}
