bug fixes on cart update and order update

--- a/frontend/templates/cart.html
+++ b/frontend/templates/cart.html
@@ -7,6 +7,10 @@
         {% for item in cart_items %}
         <li>
             {{ item.name }} - ${{ item.price }} x {{ item.quantity }}
+            <form action="{{ url_for('delete_from_cart', user_id=user_id, product_id=item.product_id) }}" method="post">
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit">Remove</button>
+            </form>
         </li>
         {% endfor %}
         <p>Total Price: ${{ total_price }}</p>
